app/webroot/assets/css/base.css
/* ... */
.section__heading { /* == h--delta special */
  font-family: var(--font-family-sans);
  color: var(--color-green);
  text-transform: uppercase;
  font-weight: 600;
  font-size: 18px;
  line-height: 1.2;
  letter-spacing: .05em; /* TODO needs adjustment to design */

  top: 5px; /* visually aligned to content */
  left: 0;
  position: absolute; /* remove from flow */
  display: inline-block;
  margin: 0;
  transform: scaleX(-1) rotate(90deg);
  transform-origin: 0 0;
}
.section__heading div {
	transform: scaleX(-1);
	transform-origin: center;
}
.section__body p {
  position: relative;
  z-index: 10;
}
.section__body + .section__actions {
	margin-top: 80px;
}
.section__actions {
	text-align: center;
}

/* Hyperlinks
---------------------------------------------------------------- */
a {
  text-decoration: none;
}

a:focus {
  outline: none;
}

/* Navigation
---------------------------------------------------------------- */
.nav__list {
  list-style: none;
  padding: 0;
  margin: 0;
}
.nav__list li {
  display: inline-block;
}
.nav__link {
  display: inline-block;

  /* inherited from t--delta-emph */
  font-family: var(--font-family-sans);
  font-weight: 600;
  font-size: 18px;
  line-height: 1.2;
  letter-spacing: .05em; /* TODO needs adjustment to design */
  text-transform: uppercase;

  color: white;
  opacity: .8;
}
.nav__link:hover {
  opacity: 1;
}
.nav__list li + li {
  margin-left: 40px;
}

/* Mobile Navigation
---------------------------------------------------------------- */
.mobile__nav {
  display: none;
  margin-top: 10px;
  float: right;
}
.mn-trigger {
  cursor: pointer;
}
.mn-container {
  display: none;
  opacity: 0;
  position: fixed;
  width: 101%;
  height: 100%;
  top: 50%;
  left: 155%;
  transform: translate(-50%, -50%);
  z-index: -1000;
  text-align: center;
  background: var(--color-diag-gradient);
  transition: opacity .5s, left 0s .5s;
}
.mn-container .logo {
  padding: 10px;
}
.mn-inframe {
  left: 50%;
  opacity: 1;
  transition: opacity .5s;
}
.mn-container ul {
  list-style: none;
  padding: 0;
  padding-top: 30vh;
}
.mn-container li {
  padding: 20px;
}
.mn-close {
  float: right;
  width: 48px;
  height: 48px;
  background-image: url(../ico/close.svg);
  cursor: pointer;
  opacity: .8;
}
.mn__link {
  /* inherited from t--delta-emph */
  font-family: var(--font-family-sans);
  font-weight: 600;
  font-size: 18px;
  line-height: 1.2;
  letter-spacing: .05em; /* TODO needs adjustment to design */
  text-transform: uppercase;

  color: white;
  opacity: .8;
}
.mn-container .lang-switch {
  position: absolute;
  bottom: 40px;
  transform: translateX(-50%);
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: .05em;
  color: white;
  opacity: .8;
}
.mn__link:hover,
.mn-container .lang-switch:hover,
.mn-close:hover {
  opacity: 1;
}
@media (max-width: 550px) {
  .main-header__nav {
    display: none;
  }
  .mobile__nav, .mn-container {
    display: block;
  }
  .mn-container {
    z-index: 1000;
  }
}


/* Figures
---------------------------------------------------------------- */
.fig {}
.fig__image {}

.video__caption,
.fig__caption {
  /* inherited from t--epsilon */
  font-family: var(--font-family-sans);
  font-weight: normal;
  font-size: 12px;
  line-height: 1.2;

  margin-top: 10px;
  font-weight: 600;
}
.video__caption a,
.fig__caption a {
  color: var(--color-green);
}
.figs .fig {
  display: inline-block;
}

/* Media
---------------------------------------------------------------- */
.video__embed-container {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
  max-width: 100%;
}

.video__embed-container iframe,
.video__embed-container object,
.video__embed-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* Logo
---------------------------------------------------------------- */
.logo {
  display: block;
  width: 200px;
  height: 45px;
  background-image: url(../img/wmde_logo_white.svg);
}

.real-logo-black {
  position: absolute;
  z-index: 100000;
  filter: invert(100%);
  transition: filter 500ms;
}
.real-logo-white {
  position: absolute;
  z-index: 100000;
}
.logo.invis {
  opacity: 0;
}
.no-filter {
  filter: invert(0);
}

/* Header
---------------------------------------------------------------- */
.main-header {
  width: 100%;
  height: 140px;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 100;
}
.main-header--black {
  filter: invert(100%);
}

.main-header .limit--l {
  position: relative;
}

.main-header__logo {
  float: left;
}
.main-header__nav {
  margin-top: 25px; /* baseline with DEUTSCHLAND of WM logo */
  float: right;
}
@media (max-width: 800px) {
  .main-header__nav {
    margin-top: 80px;
  }
}
.main-header__nav .lang-switch {
  position: absolute;
  top: -13px; /* align baseline with top of WM logo icon */
  right: 0;
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: .05em;
  color: white;
  opacity: .8;
}
.lang-switch:hover {
  opacity: 1;
}

/* Footer / Imprint
---------------------------------------------------------------- */
.main-footer {
  background-color: var(--color-black);
  color: white;
}
.main-footer__upper-wrapper {
  display: flex;
  flex-wrap: wrap;
}
.main-footer__info {
  display: flex;
  flex-wrap: wrap;
}
.main-footer__logo {
  margin: 0 100px 40px 0;
}
.main-footer__info-1 {
  margin-right: 60px;
}

.main-footer p:first-of-type {
  margin-top: 0;
}

.main-footer p a {
  color: white;
  border-bottom: 1px solid rgba(255,255,255,0.8);
}
.main-footer .nav__link {
  opacity: 1;
  text-transform: none;
  letter-spacing: 0;
}

.main-footer__upper p a {
  border-color: transparent;
}
.main-footer__upper p a:hover {
  border-color: white;
}

.imprint-toggle {
  float: left;
  margin-right: 40px;
}
.imprint-close {
  float: right;
  width: 48px;
  height: 48px;
  background-image: url(../ico/close.svg);
}

.imprint.invis {
  opacity: 0;
	padding: 0;
}
/* ... */

